syntax = "proto3";

package payment;
option java_package = "com.example.payment.grpc";
option java_outer_classname = "PaymentServiceProto";

message PaymentRequest {
  int64 userId = 1;
  string orderId = 2;
}

message PaymentResponse {
  string orderId = 1;
  int64 userId = 2;
  int32 amount = 3;
  bool success = 4;
  string message = 5;
}

service PaymentService {
  rpc GetPaymentInfo(PaymentRequest) returns (PaymentResponse);  //실제 gRPC 서비스의 메서드를 정의
}